--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ button{
     background-color: #36413e;
     width: 148px;
     height: 48px;
+    color: white;
 }
 footer{
     background-color: #306b34;
