--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: 'Roboto';
-    src: url('font/Roboto-ThinItalic.eot');
-    src: url('font/Roboto-ThinItalic.eot?#iefix') format('embedded-opentype'),
-        url('font/Roboto-ThinItalic.woff2') format('woff2'),
-        url('font/Roboto-ThinItalic.woff') format('woff'),
-        url('font/Roboto-ThinItalic.ttf') format('truetype'),
-        url('font/Roboto-ThinItalic.svg#Roboto-ThinItalic') format('svg');
-    /* font-weight: 100; */
-    font-style: italic;
+    src: url('font/Roboto-Regular.eot');
+    src: url('font/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+        url('font/Roboto-Regular.woff2') format('woff2'),
+        url('font/Roboto-Regular.woff') format('woff'),
+        url('font/Roboto-Regular.ttf') format('truetype'),
+        url('font/Roboto-Regular.svg#Roboto-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
     font-display: swap;
 }
 
