--- a/style.css
+++ b/style.css
@@ -54,12 +54,14 @@ h3{
     font-size: 40px;
     color: #19381f;
     margin-bottom: 58px;
-    text-align: center;
+   /* text-align: center; */
 
 }
 .text1{
     color: #f4f4f1;
     font-size: 20px;
+    text-align: left;
+    font-style: italic;
 }
 
 /* teqst */
@@ -72,6 +74,7 @@ article{
 }
 h4{
     font-size: 40px;
+    font-style: italic;
 
 }
 .text2{
@@ -79,6 +82,7 @@ h4{
     margin-top: 72px;
     margin-left: 100px;
     margin-right: 100px;
+    font-style: italic;
 }
 
 button{
