--- a/style.css
+++ b/style.css
@@ -80,9 +80,10 @@ h4{
 .text2{
     font-size: 20px;
     margin-top: 72px;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 184px;
+    margin-right: 137px;
     font-style: italic;
+    text-align: right;
 }
 
 button{
@@ -106,7 +107,7 @@ footer{
 
 h5 {
     font-size: 20px;
-    margin-right: 600px;
+    margin-right: 727px;
     margin-left: 77px;
     display: inline-block;
 }
